--- a/esysnomencl.sty
+++ b/esysnomencl.sty
@@ -73,7 +73,7 @@
 \DeclareOption{esys}{%
   \def\eqdeclaration#1{: Eq.\nobreakspace(#1)}%
   \def\pagedeclaration#1{\dotfill \nobreakspace#1}%
-  \def\nomname{‹L†ˆê——}}
+  \def\nomname{è¨˜å·ä¸€è¦§}}
 \DeclareOption{polish}{%
   \def\eqdeclaration#1{, porownaj rownanie\nobreakspace(#1)}%
   \def\pagedeclaration#1{, strona\nobreakspace#1}%
