--- a/main.tex
+++ b/main.tex
@@ -1,122 +1,122 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% â‘Î‚É“Ç‚İ‚Ü‚È‚¯‚ê‚Î‚È‚ç‚È‚¢ƒXƒ^ƒCƒ‹
+% çµ¶å¯¾ã«èª­ã¿è¾¼ã¾ãªã‘ã‚Œã°ãªã‚‰ãªã„ã‚¹ã‚¿ã‚¤ãƒ«
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% •W€‚ÌƒXƒ^ƒCƒ‹ƒtƒ@ƒCƒ‹ jbook
-% 11ƒ|ƒCƒ“ƒgDŠï”C‹ô”ƒy[ƒW“¯‚¶ƒfƒUƒCƒ“DŠï‹ô”‚Ç‚¿‚ç‚©‚ç‚Å‚àÍ‚ªn‚Ü‚éD
+% æ¨™æº–ã®ã‚¹ã‚¿ã‚¤ãƒ«ãƒ•ã‚¡ã‚¤ãƒ« jbook
+% 11ãƒã‚¤ãƒ³ãƒˆï¼å¥‡æ•°ï¼Œå¶æ•°ãƒšãƒ¼ã‚¸åŒã˜ãƒ‡ã‚¶ã‚¤ãƒ³ï¼å¥‡å¶æ•°ã©ã¡ã‚‰ã‹ã‚‰ã§ã‚‚ç« ãŒå§‹ã¾ã‚‹ï¼
 \documentclass[11pt,oneside,openany]{jbook} 
-% }‚ğ‘}“ü‚Å‚«‚é‚æ‚¤‚ÉDdvioutŠg’£‚ğg‚¤(Windows)
+% å›³ã‚’æŒ¿å…¥ã§ãã‚‹ã‚ˆã†ã«ï¼dvioutæ‹¡å¼µã‚’ä½¿ã†(Windows)
 %\usepackage[dviout]{graphicx} 
 \usepackage[dvipdfm]{graphicx} 
-% AMS TeX‚Ì‹L†‚ğ—˜—p‚·‚é(”®‹L†Šg’£)
+% AMS TeXã®è¨˜å·ã‚’åˆ©ç”¨ã™ã‚‹(æ•°å¼è¨˜å·æ‹¡å¼µ)
 \usepackage{amsmath,amsthm,amssymb} 
-% ƒLƒƒƒvƒVƒ‡ƒ“‚ª’·‚¢ê‡‚ÉCÜ‚è•Ô‚µ‚ğ‚Ô‚ç‰º‚°‚É‚·‚é
+% ã‚­ãƒ£ãƒ—ã‚·ãƒ§ãƒ³ãŒé•·ã„å ´åˆã«ï¼ŒæŠ˜ã‚Šè¿”ã—ã‚’ã¶ã‚‰ä¸‹ã’ã«ã™ã‚‹
 \usepackage[hang]{caption} 
-% Í‚È‚Ç‚ÌÅ‰‚Ì’i—‚Ìš‰º‚°‚ğs‚¤D
+% ç« ãªã©ã®æœ€åˆã®æ®µè½ã®å­—ä¸‹ã’ã‚’è¡Œã†ï¼
 \usepackage{indentfirst} 
-% ‹r’‚ğ‚Ü‚Æ‚ß‚éiE-SysƒXƒ^ƒCƒ‹ƒtƒ@ƒCƒ‹‚ÅŒã’‚É•ÏXj
+% è„šæ³¨ã‚’ã¾ã¨ã‚ã‚‹ï¼ˆE-Sysã‚¹ã‚¿ã‚¤ãƒ«ãƒ•ã‚¡ã‚¤ãƒ«ã§å¾Œæ³¨ã«å¤‰æ›´ï¼‰
 \usepackage{endnotes} 
-% ƒwƒbƒ_[‚Æƒtƒbƒ^[‚Ì§Œä
+% ãƒ˜ãƒƒãƒ€ãƒ¼ã¨ãƒ•ãƒƒã‚¿ãƒ¼ã®åˆ¶å¾¡
 \usepackage{fancyhdr}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ‚¨Š©‚ß‚ÌƒXƒ^ƒCƒ‹D—˜—p‚µ‚È‚¯‚ê‚Î‚Â‚¯‚È‚­‚Ä—Ç‚¢
-%  Še©‚ªƒXƒ^ƒCƒ‹ƒtƒ@ƒCƒ‹‚ğ“Ç‚İ‚Ü‚¹‚½‚¢‚Æ‚«‚Í
-%  ‚±‚Ì•”•ª‚É’Ç‰Á‚·‚é‚±‚Æ
+% ãŠå‹§ã‚ã®ã‚¹ã‚¿ã‚¤ãƒ«ï¼åˆ©ç”¨ã—ãªã‘ã‚Œã°ã¤ã‘ãªãã¦è‰¯ã„
+%  å„è‡ªãŒã‚¹ã‚¿ã‚¤ãƒ«ãƒ•ã‚¡ã‚¤ãƒ«ã‚’èª­ã¿è¾¼ã¾ã›ãŸã„ã¨ãã¯
+%  ã“ã®éƒ¨åˆ†ã«è¿½åŠ ã™ã‚‹ã“ã¨
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% pdfƒtƒ@ƒCƒ‹‚ğì¬‚·‚éÛ‚ÉCƒŠƒ“ƒN‚Æ‚µ‚¨‚è‚ğì¬Dout2uni‚Ìê‡
-% Å‹ß‚Í dvipdfmx‚ğg‚¤‚Ì‚ÅC‚±‚Ì‹@”\‚ÍOFF‚Ì•û‚ª—Ç‚¢
+% pdfãƒ•ã‚¡ã‚¤ãƒ«ã‚’ä½œæˆã™ã‚‹éš›ã«ï¼Œãƒªãƒ³ã‚¯ã¨ã—ãŠã‚Šã‚’ä½œæˆï¼out2uniã®å ´åˆ
+% æœ€è¿‘ã¯ dvipdfmxã‚’ä½¿ã†ã®ã§ï¼Œã“ã®æ©Ÿèƒ½ã¯OFFã®æ–¹ãŒè‰¯ã„
 %\usepackage[dvipdfm, bookmarks=true,bookmarksnumbered=true,bookmarkstype=toc]{hyperref} 
-% pdfƒtƒ@ƒCƒ‹‚ğì¬‚·‚é‚½‚ß‚ÌŠg’£İ’èi‚µ‚¨‚è‚È‚Ç‚Ìì¬j
+% pdfãƒ•ã‚¡ã‚¤ãƒ«ã‚’ä½œæˆã™ã‚‹ãŸã‚ã®æ‹¡å¼µè¨­å®šï¼ˆã—ãŠã‚Šãªã©ã®ä½œæˆï¼‰
 \AtBeginDvi{\special{pdf:tounicode 90ms-RKSJ-UCS2}}
-% F‚ğg‚¤Dpdf‚ğì‚é‚Æ‚«‚É‚àŠÖŒW
+% è‰²ã‚’ä½¿ã†ï¼pdfã‚’ä½œã‚‹ã¨ãã«ã‚‚é–¢ä¿‚
 \usepackage[dvipdfm]{color} 
-% pdfƒtƒ@ƒCƒ‹‚ğì¬‚·‚é‚½‚ß‚Ìİ’è
+% pdfãƒ•ã‚¡ã‚¤ãƒ«ã‚’ä½œæˆã™ã‚‹ãŸã‚ã®è¨­å®š
 \usepackage[%
 dvipdfm,%
-pdfstartview={FitH -32768},%    •`‰æ—Ìˆæ‚Ì•‚É‡‚í‚¹‚émdefault ‚Í‘S‘Ì•\¦n
-bookmarks=true,%                ‚µ‚¨‚è•t‚«mdefault ‚Í falsen
-bookmarksnumbered=true,%        Í‚âß‚Ì”Ô†‚ğ‚Ó‚émdefault ‚Í falsen
-bookmarkstype=toc,%             –ÚŸî•ñ‚Ìƒtƒ@ƒCƒ‹mŠg’£q tocn‚ğQÆ
-colorlinks=false,%              ƒnƒCƒp[ƒŠƒ“ƒN‚ğF•¶š‚Å‚Í‚È‚­F˜g‚Émdefaultn
-linkbordercolor={0 1 1},%       link ‚Ì˜g‚ÌF aqua mdefault ‚Í red {1 0 0}n
-citebordercolor={0 1 0},%       cite ‚Ì˜g‚ÌF lime mdefaultn
-urlbordercolor={0 0 1},%        url ‚Ì˜g‚ÌF blue mdefaultn
-%pdftitle={ƒ^ƒCƒgƒ‹},%           mdefault ‚Í‹ó”’n
-%pdfsubject={•›ƒ^ƒCƒgƒ‹},%       mdefault ‚Í‹ó”’n
-%pdfauthor={–¼},%              mdefault ‚Í‹ó”’n
-%pdfkeywords={ƒL[ƒ[ƒh}%       mdefault ‚Í‹ó”’n
+pdfstartview={FitH -32768},%    æç”»é ˜åŸŸã®å¹…ã«åˆã‚ã›ã‚‹ï¼»default ã¯å…¨ä½“è¡¨ç¤ºï¼½
+bookmarks=true,%                ã—ãŠã‚Šä»˜ãï¼»default ã¯ falseï¼½
+bookmarksnumbered=true,%        ç« ã‚„ç¯€ã®ç•ªå·ã‚’ãµã‚‹ï¼»default ã¯ falseï¼½
+bookmarkstype=toc,%             ç›®æ¬¡æƒ…å ±ã®ãƒ•ã‚¡ã‚¤ãƒ«ï¼»æ‹¡å¼µå­ tocï¼½ã‚’å‚ç…§
+colorlinks=false,%              ãƒã‚¤ãƒ‘ãƒ¼ãƒªãƒ³ã‚¯ã‚’è‰²æ–‡å­—ã§ã¯ãªãè‰²æ ã«ï¼»defaultï¼½
+linkbordercolor={0 1 1},%       link ã®æ ã®è‰² aqua ï¼»default ã¯ red {1 0 0}ï¼½
+citebordercolor={0 1 0},%       cite ã®æ ã®è‰² lime ï¼»defaultï¼½
+urlbordercolor={0 0 1},%        url ã®æ ã®è‰² blue ï¼»defaultï¼½
+%pdftitle={ã‚¿ã‚¤ãƒˆãƒ«},%           ï¼»default ã¯ç©ºç™½ï¼½
+%pdfsubject={å‰¯ã‚¿ã‚¤ãƒˆãƒ«},%       ï¼»default ã¯ç©ºç™½ï¼½
+%pdfauthor={æ°å},%              ï¼»default ã¯ç©ºç™½ï¼½
+%pdfkeywords={ã‚­ãƒ¼ãƒ¯ãƒ¼ãƒ‰}%       ï¼»default ã¯ç©ºç™½ï¼½
 ]{hyperref}
-% URL‚Ì‹Lq‚ª—eˆÕ‚Æ‚È‚é
+% URLã®è¨˜è¿°ãŒå®¹æ˜“ã¨ãªã‚‹
 \usepackage{url} 
-% screen ŠÂ‹«‚ªg‚¦‚é‚æ‚¤‚É
+% screen ç’°å¢ƒãŒä½¿ãˆã‚‹ã‚ˆã†ã«
 \usepackage{ascmac} 
-% boxŠÂ‹«‚ÌŠg’£
+% boxç’°å¢ƒã®æ‹¡å¼µ
 \usepackage{eclbkbox} 
-% }‚É(a)(b)(c)‚Æ‹L†‚ğU‚ê‚éƒpƒbƒP[ƒW
+% å›³ã«(a)(b)(c)ã¨è¨˜å·ã‚’æŒ¯ã‚Œã‚‹ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸
 \usepackage{subcaption}
-% ƒRƒƒ“ƒgƒAƒEƒg‚ğ \begin{comment}ƒRƒƒ“ƒg\end{comment}‚ÅÀŒ»
+% ã‚³ãƒ¡ãƒ³ãƒˆã‚¢ã‚¦ãƒˆã‚’ \begin{comment}ã‚³ãƒ¡ãƒ³ãƒˆ\end{comment}ã§å®Ÿç¾
 \usepackage{comment} 
-% ƒŒƒCƒAƒEƒgŠm”F‚ÌÛ‚Ég‚¤
+% ãƒ¬ã‚¤ã‚¢ã‚¦ãƒˆç¢ºèªã®éš›ã«ä½¿ã†
 %\usepackage{layout} 
-% Verbatim‚ÌŠg’£
+% Verbatimã®æ‹¡å¼µ
 \usepackage{fancyvrb} 
-% PSfrag‚ğ—˜—p‚·‚é
+% PSfragã‚’åˆ©ç”¨ã™ã‚‹
 %\usepackage[dviout]{psfrag} 
 %\usepackage{psfrag} 
-% EPS ‚Ì}‚Éƒ‰ƒxƒ‹‚ğd‚Ë‚é
+% EPS ã®å›³ã«ãƒ©ãƒ™ãƒ«ã‚’é‡ã­ã‚‹
 %\usepackage{labelfig}
-% •\“à‚ÉƒJƒ‰[‚ğ—p‚¢‚é
+% è¡¨å†…ã«ã‚«ãƒ©ãƒ¼ã‚’ç”¨ã„ã‚‹
 \usepackage[dviout]{colortbl}
-% ƒtƒHƒ“ƒg
+% ãƒ•ã‚©ãƒ³ãƒˆ
 \usepackage{jtygm}
-% }‚Ì‹­§‘}“ü
+% å›³ã®å¼·åˆ¶æŒ¿å…¥
 \usepackage{here}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% â‘Î‚É“Ç‚İ‚Ü‚È‚¯‚ê‚Î‚È‚ç‚È‚¢ƒXƒ^ƒCƒ‹
-%  ‹{¡‚ªì¬‚µ‚½‚è•ÏXCŠg’£‚µ‚½‚à‚Ì
+% çµ¶å¯¾ã«èª­ã¿è¾¼ã¾ãªã‘ã‚Œã°ãªã‚‰ãªã„ã‚¹ã‚¿ã‚¤ãƒ«
+%  å®®æ²»ãŒä½œæˆã—ãŸã‚Šå¤‰æ›´ï¼Œæ‹¡å¼µã—ãŸã‚‚ã®
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% nomenclƒXƒ^ƒCƒ‹‚ÌŠg’£C”®‚Ì‹L†ˆê——‚ğì¬‚·‚é‚½‚ß‚Ég—p
-% nomenclƒXƒ^ƒCƒ‹‚ğ‹{¡C³
+% nomenclã‚¹ã‚¿ã‚¤ãƒ«ã®æ‹¡å¼µï¼Œæ•°å¼ã®è¨˜å·ä¸€è¦§ã‚’ä½œæˆã™ã‚‹ãŸã‚ã«ä½¿ç”¨
+% nomenclã‚¹ã‚¿ã‚¤ãƒ«ã‚’å®®æ²»ä¿®æ­£
 \usepackage[refeq,refpage,esys]{esysnomencl}
-% E-Sys—pƒXƒ^ƒCƒ‹ƒtƒ@ƒCƒ‹ ‹{¡ì¬
+% E-Sysç”¨ã‚¹ã‚¿ã‚¤ãƒ«ãƒ•ã‚¡ã‚¤ãƒ« å®®æ²»ä½œæˆ
 \usepackage{esysthesis}
-% }E•\ŠÖŒW‚ÌrefƒRƒ}ƒ“ƒh
+% å›³ãƒ»è¡¨é–¢ä¿‚ã®refã‚³ãƒãƒ³ãƒ‰
 \usepackage{sugarstyle}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ƒ†[ƒU[İ’è—Ìˆæ
-%  ‚±‚Ì•”•ª‚ğC©•ªi’Bj‚Ìî•ñ‚ÉC³‚µ‚Ä‚­‚¾‚³‚¢D
+% ãƒ¦ãƒ¼ã‚¶ãƒ¼è¨­å®šé ˜åŸŸ
+%  ã“ã®éƒ¨åˆ†ã‚’ï¼Œè‡ªåˆ†ï¼ˆé”ï¼‰ã®æƒ…å ±ã«ä¿®æ­£ã—ã¦ãã ã•ã„ï¼
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-\jtitle{í—ª“IƒCƒmƒx[ƒVƒ‡ƒ“‘n‘¢ƒvƒƒOƒ‰ƒ€i‚r‚h‚oj‘æ‚QŠú^\\ƒrƒbƒOƒf[ƒ^E‚`‚h‚ğŠˆ—p‚µ‚½ƒTƒCƒo[‹óŠÔŠî”Õ‹Zp^‰îŒìx‰‡‹Zp}{}
-\etitle{”rŸ•ƒZƒ“ƒT[‚ğŠî²‚Æ‚µ‚½‰îŒìÒx‰‡ƒVƒXƒeƒ€‚ÌŠJ”­}{}
+\jtitle{æ™‚é–“çš„éåŒæœŸæ€§ã‚’è€ƒæ…®ã—ãŸé éš”ä½œæ¥­æ”¯æ´ã‚·ã‚¹ãƒ†ãƒ ã®ææ¡ˆ}{-å•é¡Œå¿—å‘å‹ã‚·ã‚¹ãƒ†ãƒ (POS)ã‚’ãƒ™ãƒ¼ã‚¹ã¨ã—ãŸãƒã‚¦ãƒã‚¦ã®ãƒ‡ãƒ¼ã‚¿åŒ–ã®ãŸã‚ã®ã‚·ã‚¹ãƒ†ãƒ ãƒ¢ãƒ‡ãƒ«-}
+\etitle{aaaaaaaaa}{}
 
-\nendo{2019}
+\nendo{2018}
 
-\thesistype{•ñ‘}
-\belongdept{“Æ—§s­–@lVƒGƒlƒ‹ƒM[EY‹Æ‹Zp‘‡ŠJ”­‹@\}
-\belongcourse{~}
+\thesistype{åšå£«è«–æ–‡}
+\belongdept{å·¥å­¦ç ”ç©¶ç§‘ å·¥å­¦å°‚æ”»}
+\belongcourse{åƒè‘‰å·¥æ¥­å¤§å­¦ å¤§å­¦é™¢}
 
-\ebelongdept{iˆÏ‘õæjŠ”®‰ïĞ‚‚‚‚}
-\ebelongcourse{~}
+\ebelongdept{Graduate School of Engineering, Engineering major}
+\ebelongcourse{Chiba Institute of Technology}
 
-\authora{‘æ‚P‚W‚P‚O‚Q‚O‚V‚O|‚O†}{}{}
+\authora{è…é‡~ç¿”å¹³}{}{Shohei~Sugano}
 %
-\datestamp{2019}{3}
+\datestamp{2023}{3}
 %
-\headshorttitle{”rŸ•ƒZƒ“ƒT[‚ğŠî²‚Æ‚µ‚½‰îŒìÒx‰‡ƒVƒXƒeƒ€‚ÌŠJ”­}
+\headshorttitle{æ™‚é–“çš„éåŒæœŸæ€§ã‚’è€ƒæ…®ã—ãŸé éš”ä½œæ¥­æ”¯æ´ã‚·ã‚¹ãƒ†ãƒ ã®ææ¡ˆ}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% â‘Î‚É“Ç‚İ‚Ü‚È‚¯‚ê‚Î‚È‚ç‚È‚¢ƒXƒ^ƒCƒ‹
-%  ‡”Ô‚ğ‘¼‚ÌˆÊ’u‚É‚µ‚È‚¢‚Ù‚¤‚ª—Ç‚¢D
+% çµ¶å¯¾ã«èª­ã¿è¾¼ã¾ãªã‘ã‚Œã°ãªã‚‰ãªã„ã‚¹ã‚¿ã‚¤ãƒ«
+%  é †ç•ªã‚’ä»–ã®ä½ç½®ã«ã—ãªã„ã»ã†ãŒè‰¯ã„ï¼
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% E-Sys—pğŒ’è‹`ƒXƒ^ƒCƒ‹ƒtƒ@ƒCƒ‹ ‹{¡ì¬
+% E-Sysç”¨æ¡ä»¶å®šç¾©ã‚¹ã‚¿ã‚¤ãƒ«ãƒ•ã‚¡ã‚¤ãƒ« å®®æ²»ä½œæˆ
 \usepackage{esyshdr}
 % 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ƒvƒŠƒAƒ“ƒuƒ‹I—¹
-% ƒhƒLƒ…ƒƒ“ƒgŠJni—‰ğ‚µ‚Ä‚¢‚È‚¢l‚Í‘‚«Š·‚¦‚È‚¢‚æ‚¤‚Éj
+% ãƒ—ãƒªã‚¢ãƒ³ãƒ–ãƒ«çµ‚äº†
+% ãƒ‰ã‚­ãƒ¥ãƒ¡ãƒ³ãƒˆé–‹å§‹ï¼ˆç†è§£ã—ã¦ã„ãªã„äººã¯æ›¸ãæ›ãˆãªã„ã‚ˆã†ã«ï¼‰
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \makeglossary
@@ -125,38 +125,38 @@ urlbordercolor={0 0 1},%        url ‚Ì˜g‚ÌF blue mdefaultn
 \input{predoc}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% –{•¶‚ğŠJn
-% ‚±‚±‚©‚ç‰º‚ğŠe©‚Ìİ’è‚É‚ ‚í‚¹‚Ä•ÏX
+% æœ¬æ–‡ã‚’é–‹å§‹
+% ã“ã“ã‹ã‚‰ä¸‹ã‚’å„è‡ªã®è¨­å®šã«ã‚ã‚ã›ã¦å¤‰æ›´
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \input{main/chap_1/1_introduction}
-%\input{main/chap_2/2_investigation}
-%\input{main/chap_3/3_development}
-%\input{main/chap_4/4_share}
-%\input{main/chap_5/5_conclusion}
+% \input{main/chap_2/2_investigation}
+% \input{main/chap_3/3_development}
+% \input{main/chap_4/4_share}
+% \input{main/chap_5/5_conclusion}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% –{•¶‚Í‚±‚±‚Ü‚ÅDƒJƒEƒ“ƒ^‚ğ‚¢‚Á‚½‚ñ“f‚«o‚·D
+% æœ¬æ–‡ã¯ã“ã“ã¾ã§ï¼ã‚«ã‚¦ãƒ³ã‚¿ã‚’ã„ã£ãŸã‚“åãå‡ºã™ï¼
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \clearpage
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ‹r’iŒã’j‚ğ‚Â‚¯‚é
-%  –{•¶’†‚É‹r’(\footnote)‚ğ‚Â‚¯‚È‚©‚Á‚½ê‡‚ÍC
-%  ƒRƒƒ“ƒgƒAƒEƒg‚µ‚Ä‚­‚¾‚³‚¢D
+% è„šæ³¨ï¼ˆå¾Œæ³¨ï¼‰ã‚’ã¤ã‘ã‚‹
+%  æœ¬æ–‡ä¸­ã«è„šæ³¨(\footnote)ã‚’ã¤ã‘ãªã‹ã£ãŸå ´åˆã¯ï¼Œ
+%  ã‚³ãƒ¡ãƒ³ãƒˆã‚¢ã‚¦ãƒˆã—ã¦ãã ã•ã„ï¼
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %\listnotesname
-%\addcontentsline{toc}{chapter}{Œã’}
+%\addcontentsline{toc}{chapter}{å¾Œæ³¨}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Ql•¶Œ£‚ğ‚Â‚¯‚é
-%  bibtex ‚ÌƒXƒ^ƒCƒ‹ƒtƒ@ƒCƒ‹ibstƒtƒ@ƒCƒ‹j‚É‚Í
-%   esysthesis.bst ‚ğw’è
-%  \bibliography‚Ìˆø”‚É‚ÍQl•¶Œ£ƒtƒ@ƒCƒ‹‚ğw’è 
-%  Ql•¶Œ£ƒtƒ@ƒCƒ‹ibibƒtƒ@ƒCƒ‹j‚ª•¡”‘¶İ‚·‚éê‡‚É‚ÍC
-%   WelfareJ,WelfareT‚Ì‚æ‚¤‚É”¼ŠpƒJƒ“ƒ}‚Å‹æØ‚Á‚Äw’è‚·‚éD
+% å‚è€ƒæ–‡çŒ®ã‚’ã¤ã‘ã‚‹
+%  bibtex ã®ã‚¹ã‚¿ã‚¤ãƒ«ãƒ•ã‚¡ã‚¤ãƒ«ï¼ˆbstãƒ•ã‚¡ã‚¤ãƒ«ï¼‰ã«ã¯
+%   esysthesis.bst ã‚’æŒ‡å®š
+%  \bibliographyã®å¼•æ•°ã«ã¯å‚è€ƒæ–‡çŒ®ãƒ•ã‚¡ã‚¤ãƒ«ã‚’æŒ‡å®š 
+%  å‚è€ƒæ–‡çŒ®ãƒ•ã‚¡ã‚¤ãƒ«ï¼ˆbibãƒ•ã‚¡ã‚¤ãƒ«ï¼‰ãŒè¤‡æ•°å­˜åœ¨ã™ã‚‹å ´åˆã«ã¯ï¼Œ
+%   WelfareJ,WelfareTã®ã‚ˆã†ã«åŠè§’ã‚«ãƒ³ãƒã§åŒºåˆ‡ã£ã¦æŒ‡å®šã™ã‚‹ï¼
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \bibliographystyle{esysthesis}
@@ -165,37 +165,37 @@ urlbordercolor={0 0 1},%        url ‚Ì˜g‚ÌF blue mdefaultn
     \bibliography{bib/reference}
 \end{flushleft}
 %\end{flushright}
-\addcontentsline{toc}{chapter}{Ql•¶Œ£}
+\addcontentsline{toc}{chapter}{å‚è€ƒæ–‡çŒ®}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% •t˜^ŠÂ‹«‚Ìİ’è
-%  •t˜^‚É‚ÍCÅ’á‚Å‚àŠe©‚ªì¬‚µ‚½ƒvƒƒOƒ‰ƒ€‚âƒf[ƒ^‚Ì
-%  —˜—p•û–@‚ÉŠÖ‚·‚é‰ğà‚¨‚æ‚ÑŒ¤‹†”­•\‚Éw“E‚³‚ê‚½
-%  ¿‹^‰“š‚ğÚ‚¹‚é‚±‚ÆD
+% ä»˜éŒ²ç’°å¢ƒã®è¨­å®š
+%  ä»˜éŒ²ã«ã¯ï¼Œæœ€ä½ã§ã‚‚å„è‡ªãŒä½œæˆã—ãŸãƒ—ãƒ­ã‚°ãƒ©ãƒ ã‚„ãƒ‡ãƒ¼ã‚¿ã®
+%  åˆ©ç”¨æ–¹æ³•ã«é–¢ã™ã‚‹è§£èª¬ãŠã‚ˆã³ç ”ç©¶ç™ºè¡¨æ™‚ã«æŒ‡æ‘˜ã•ã‚ŒãŸ
+%  è³ªç–‘å¿œç­”ã‚’è¼‰ã›ã‚‹ã“ã¨ï¼
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ‚±‚Ì•”•ª‚ÍC³‚µ‚Ä‚Í‚¢‚¯‚È‚¢
+% ã“ã®éƒ¨åˆ†ã¯ä¿®æ­£ã—ã¦ã¯ã„ã‘ãªã„
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \appendix
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ‚±‚±‚©‚ç‰º‚É•t˜^‚Ì“à—e‚ğ‘‚¢‚Ä‚¢‚­‚±‚Æ
+% ã“ã“ã‹ã‚‰ä¸‹ã«ä»˜éŒ²ã®å†…å®¹ã‚’æ›¸ã„ã¦ã„ãã“ã¨
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% CD-ROM‚Æ‚µ‚Ä“Y•t‚·‚éƒvƒƒOƒ‰ƒ€‚¨‚æ‚Ñƒf[ƒ^‚Ì—˜—p•û–@
-%  appendix.tex ‚É‹Lqi•ÏX‰Âj
+% CD-ROMã¨ã—ã¦æ·»ä»˜ã™ã‚‹ãƒ—ãƒ­ã‚°ãƒ©ãƒ ãŠã‚ˆã³ãƒ‡ãƒ¼ã‚¿ã®åˆ©ç”¨æ–¹æ³•
+%  appendix.tex ã«è¨˜è¿°ï¼ˆå¤‰æ›´å¯ï¼‰
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-%\input{main/appendix}
-%\clearpage
+% \input{main/appendix}
+\clearpage
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ‚»‚Ì‘¼‚Ì•t˜^
-%  ‚»‚Ì‘¼‚Ì•t˜^‚ª—L‚éê‡‚É‚ÍCˆÈ‰º‚Ì•”•ª‚Å
-%  •t˜^ƒtƒ@ƒCƒ‹–¼‚ğw’è‚·‚é
+% ãã®ä»–ã®ä»˜éŒ²
+%  ãã®ä»–ã®ä»˜éŒ²ãŒæœ‰ã‚‹å ´åˆã«ã¯ï¼Œä»¥ä¸‹ã®éƒ¨åˆ†ã§
+%  ä»˜éŒ²ãƒ•ã‚¡ã‚¤ãƒ«åã‚’æŒ‡å®šã™ã‚‹
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %\input{main/oboegaki}
@@ -204,45 +204,45 @@ urlbordercolor={0 0 1},%        url ‚Ì˜g‚ÌF blue mdefaultn
 %\clearpage
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ¿‹^‰“šW
-%  qa.tex “à‚ÉŠ’è‚ÌƒtƒH[ƒ}ƒbƒg‚É‚Ä‹Lq‚·‚é‚±‚ÆD
-%  ‚±‚Ì•”•ª©‘Ì‚ÍC³‚µ‚È‚­‚Ä—Ç‚¢
+% è³ªç–‘å¿œç­”é›†
+%  qa.tex å†…ã«æ‰€å®šã®ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆã«ã¦è¨˜è¿°ã™ã‚‹ã“ã¨ï¼
+%  ã“ã®éƒ¨åˆ†è‡ªä½“ã¯ä¿®æ­£ã—ãªãã¦è‰¯ã„
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %\input{main/qa}
 %\clearpage
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Œ¤‹†E”­•\‹ÆÑ
-%  ŠwŠO‚Å”­•\C“W¦C˜_•¶ŒöŠJ‚È‚Ç‚ğs‚Á‚½Û‚É‚ÍC
-%   achievement.tex “à‚ÉŠ’è‚ÌƒtƒH[ƒ}ƒbƒg‚É‚Ä‹Lq‚·‚é‚±‚Æ
-%  ”­•\‚È‚Ç‚ğs‚í‚È‚©‚Á‚½‚Æ‚«‚É‚ÍC‰º‹L‚Ì•”•ª‚ğƒRƒƒ“ƒgƒAƒEƒg
-%   ‚·‚é‚±‚Æ
+% ç ”ç©¶ãƒ»ç™ºè¡¨æ¥­ç¸¾
+%  å­¦å¤–ã§ç™ºè¡¨ï¼Œå±•ç¤ºï¼Œè«–æ–‡å…¬é–‹ãªã©ã‚’è¡Œã£ãŸéš›ã«ã¯ï¼Œ
+%   achievement.tex å†…ã«æ‰€å®šã®ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆã«ã¦è¨˜è¿°ã™ã‚‹ã“ã¨
+%  ç™ºè¡¨ãªã©ã‚’è¡Œã‚ãªã‹ã£ãŸã¨ãã«ã¯ï¼Œä¸‹è¨˜ã®éƒ¨åˆ†ã‚’ã‚³ãƒ¡ãƒ³ãƒˆã‚¢ã‚¦ãƒˆ
+%   ã™ã‚‹ã“ã¨
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %\newpage
-%\addcontentsline{toc}{chapter}{Œ¤‹†‹ÆÑ2}
-%\chapter*{Œ¤‹†‹ÆÑ}
+%\addcontentsline{toc}{chapter}{ç ”ç©¶æ¥­ç¸¾2}
+%\chapter*{ç ”ç©¶æ¥­ç¸¾}
 %
-%\chapter{Œ¤‹†‹ÆÑ}
+%\chapter{ç ”ç©¶æ¥­ç¸¾}
 %\input{main/achievement}
 %
 %\newpage
 %
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ©ŒÈĞ‰îƒy[ƒW
+% è‡ªå·±ç´¹ä»‹ãƒšãƒ¼ã‚¸
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\birthday{1988}{9}{8}
-%\hometown{œœœœœ}
-%\high_school{‚“™ŠwZ}
+%\hometown{â—â—â—â—â—}
+%\high_school{é«˜ç­‰å­¦æ ¡}
 %\nickname{}{}{}{}{}{}
-%\comment{¡¡¡}
+%\comment{â– â– â– }
 %\esysmakepostscript
 
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% –{•¶‚ğI—¹
+% æœ¬æ–‡ã‚’çµ‚äº†
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \end{document}
