--- a/predoc.tex
+++ b/predoc.tex
@@ -1,28 +1,28 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ƒ^ƒCƒgƒ‹ƒy[ƒWƒRƒ}ƒ“ƒh‹N“®
-%  ó—Ìˆóƒy[ƒW‚Æ•\†‚©‚ç\¬
+% ã‚¿ã‚¤ãƒˆãƒ«ãƒšãƒ¼ã‚¸ã‚³ãƒãƒ³ãƒ‰èµ·å‹•
+%  å—é ˜å°ãƒšãƒ¼ã‚¸ã¨è¡¨ç´™ã‹ã‚‰æ§‹æˆ
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \esysmaketitle
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% –{•¶‘O‚Ìƒy[ƒWİ’è
-%  ˜_•¶—v|‚Í youshi.texCABSTRACT‚Í abstract.texC
-%  Ó«‚Í thanks.tex ‚É‹Lq‚·‚é‚±‚Æ
-%  anstract.tex “à‚ÍŠ’è‚ÌƒtƒH[ƒ}ƒbƒg‚É‚Ä‹Lq‚·‚é‚±‚Æ
-%  ƒ[ƒ~ƒŒƒ|ì¬‚Í‘S‚ÄƒRƒƒ“ƒgƒAƒEƒg‘²˜_ì¬‚É–ß‚·     %%%%modified by sugacchi 2012. June 21
+% æœ¬æ–‡å‰ã®ãƒšãƒ¼ã‚¸è¨­å®š
+%  è«–æ–‡è¦æ—¨ã¯ youshi.texï¼ŒABSTRACTã¯ abstract.texï¼Œ
+%  è¬è¾ã¯ thanks.tex ã«è¨˜è¿°ã™ã‚‹ã“ã¨
+%  anstract.tex å†…ã¯æ‰€å®šã®ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆã«ã¦è¨˜è¿°ã™ã‚‹ã“ã¨
+%  ã‚¼ãƒŸãƒ¬ãƒä½œæˆã¯å…¨ã¦ã‚³ãƒ¡ãƒ³ãƒˆã‚¢ã‚¦ãƒˆå’è«–ä½œæˆæ™‚ã«æˆ»ã™     %%%%modified by sugacchi 2012. June 21
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-\pagenumbering{roman}%ƒRƒR‚ÍƒRƒƒ“ƒgƒAƒEƒg‚µ‚È‚¢
+\pagenumbering{roman}%ã‚³ã‚³ã¯ã‚³ãƒ¡ãƒ³ãƒˆã‚¢ã‚¦ãƒˆã—ãªã„
 %
 %%%%%%%%modified by sugacchi 2012. June 21
 %
-%\chapter*{Ó«}
-%\addcontentsline{toc}{chapter}{Ó«}
-%\input{main/thanks}
-%\clearpage
-\chapter*{—v|}
-\addcontentsline{toc}{chapter}{—v|}
+\chapter*{è¬è¾}
+\addcontentsline{toc}{chapter}{è¬è¾}
+\input{main/thanks}
+\clearpage
+\chapter*{è«–æ–‡è¦æ—¨}
+\addcontentsline{toc}{chapter}{è«–æ–‡è¦æ—¨}
 \input{main/youshi}
 \clearpage
 \chapter*{ABSTRACT}
@@ -33,24 +33,24 @@
 \clearpage
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% –ÚŸƒy[ƒWİ’è
-% –ÚŸC}–ÚŸC•\–ÚŸC‹L†ˆê——
+% ç›®æ¬¡ãƒšãƒ¼ã‚¸è¨­å®š
+% ç›®æ¬¡ï¼Œå›³ç›®æ¬¡ï¼Œè¡¨ç›®æ¬¡ï¼Œè¨˜å·ä¸€è¦§
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \tableofcontents
-\addcontentsline{toc}{chapter}{–ÚŸ}
+\addcontentsline{toc}{chapter}{ç›®æ¬¡}
 \clearpage
 
 \listoffigures
-\addcontentsline{toc}{chapter}{}–ÚŸ}
+\addcontentsline{toc}{chapter}{å›³ç›®æ¬¡}
 \clearpage
 
 \listoftables
-\addcontentsline{toc}{chapter}{•\–ÚŸ}
+\addcontentsline{toc}{chapter}{è¡¨ç›®æ¬¡}
 \clearpage
 
 \printglossary
-\addcontentsline{toc}{chapter}{‹L†ˆê——}
+\addcontentsline{toc}{chapter}{è¨˜å·ä¸€è¦§}
 \clearpage
 
 \pagebreak
