--- a/sugarstyle.sty
+++ b/sugarstyle.sty
@@ -1,25 +1,25 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %		sugarstyle.sty 								  %
 %													  %
-%		›–ì ãÄ•½ i‚·‚ª‚Á‚¿j				@@@@@	%
+%		è…é‡ ç¿”å¹³ ï¼ˆã™ãŒã£ã¡ï¼‰				ã€€ã€€ã€€ã€€ã€€	%
 %		Email: mad.hatter.teaparty3173@gmail.com	  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%•\¦İ’è
-% •\QÆ&ƒ‰ƒxƒ‹   %\label{tbl.??}	
+%è¡¨ç¤ºè¨­å®š
+% è¡¨å‚ç…§&ãƒ©ãƒ™ãƒ«   %\label{tbl.??}	
 \newcommand{\refTbl}[1]{\textbf{Table.~\ref{#1}}}
-\newcommand{\refTblJp}[1]{\textbf{•\~\ref{#1}}}
-% ®QÆ&ƒ‰ƒxƒ‹   %\label{eq.??}
+\newcommand{\refTblJp}[1]{\textbf{è¡¨~\ref{#1}}}
+% å¼å‚ç…§&ãƒ©ãƒ™ãƒ«   %\label{eq.??}
 \newcommand{\refEq}[1]{\textbf{Eq.~(\ref{#1})}}
-\newcommand{\refEqJp}[1]{\textbf{®~(\ref{#1})}}
-% }QÆ&ƒ‰ƒxƒ‹   %\label{fig.??}
+\newcommand{\refEqJp}[1]{\textbf{å¼~(\ref{#1})}}
+% å›³å‚ç…§&ãƒ©ãƒ™ãƒ«   %\label{fig.??}
 \newcommand{\refFig}[1]{\textbf{Fig.~\ref{#1}}}
-\newcommand{\refFigJp}[1]{\textbf{}~\ref{#1}}}
-% •ÅQÆ&ƒ‰ƒxƒ‹   %\label{pp.??}
+\newcommand{\refFigJp}[1]{\textbf{å›³~\ref{#1}}}
+% é å‚ç…§&ãƒ©ãƒ™ãƒ«   %\label{pp.??}
 \newcommand{\refPP}[1]{\textbf{\pageref{#1}}}
-%\cite{?????} --> \begin{thebibliography}{n}  \bibitem{k} ????? \end{thebibliography} %%Ql•¶Œ£
+%\cite{?????} --> \begin{thebibliography}{n}  \bibitem{k} ????? \end{thebibliography} %%å‚è€ƒæ–‡çŒ®
 
-%F
+%è‰²
 %color -> {\color{#color} ?????????  }
 \definecolor{olivegreen}{cmyk}{ .64, 0, .95, .40}
 \definecolor{purple}{cmyk}{ .45, .86 , 0, 0}
@@ -27,17 +27,17 @@
 %mathe
 %\expe{#1}=>e^{#1}
 \newcommand{\expe}[1]{\mathrm{e}^{#1}}
-%\therefore=>æ
-%\newcommand*{\therefore}{æ}
-\renewcommand*{\therefore}{æ}
-%\thus=>ˆ
-\newcommand{\thus}{ˆ}
+%\therefore=>âˆµ
+%\newcommand*{\therefore}{âˆµ}
+\renewcommand*{\therefore}{âˆµ}
+%\thus=>âˆ´
+\newcommand{\thus}{âˆ´}
 %\mat{1}{2}{3}{4}=>[1 2; 3 4]
 \newcommand{\mat}[4]{\begin{bmatrix}#1 & #2 \cr #3 & #4 \end{bmatrix}}
 %\mat{1}{2}{3}{4}{5}{6}{7}{8}{9}=>[1 2 3; 4 5 6; 7 8 9]
 \newcommand{\matt}[9]{\begin{bmatrix}#1 & #2 & #3\cr #4 & #5 & #6\cr #7 & #8 & #9 \end{bmatrix}}
-%\deg=>‹
-\renewcommand{\deg}{‹}
+%\deg=>Â°
+\renewcommand{\deg}{Â°}
 %\div=>div
 \renewcommand{\div}{\mathrm{div}}
 %\grad=>grad
@@ -46,10 +46,10 @@
 \newcommand{\rot}{\mathrm{rot}}
 %\where=>where
 \newcommand{\where}{\mathrm{where}}
-%\dx=>”÷•ª‹L†
+%\dx=>å¾®åˆ†è¨˜å·
 \newcommand{\dx}[3]{ \frac{d^{#3}{#2}}{d{#1}^{#3}} }
-%\px=>•Î”÷•ª‹L†
+%\px=>åå¾®åˆ†è¨˜å·
 \newcommand{\px}[3]{ \frac{\partial^{#3} {#2} }{\partial {#1}^{#3}} }
-%\Res=>—¯”’è—
+%\Res=>ç•™æ•°å®šç†
 \newcommand{\Res}[2]{ \mathrm{Res}_{ \hspace{-20pt} \lower5pt\hbox{\footnotesize${#1}={#2}$} }} 
 
